update of html page

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
         <title>Core Interaction</title>
     </head>
     <body>
-        Hello World
+        Hello World, it's me Sabrina 
     </body>
 </html>
